# autogen-ext-bedrock

./: README.md  pyproject.toml
src/autogen_ext_bedrock/: __init__.py  _client.py  _config.py
tests/: conftest.py  test_client.py
