[project]
name = "autogen-ext-bedrock"
version = "0.1.0"
description = "Amazon Bedrock Extention for Autogen (>= v0.4)"
readme = "README.md"
authors = [
    { name = "Aiden Dai", email = "daixb@amazon.com" }
]
keywords = ["autogen", "autogen-ext", "model", "client", "bedrock"]
requires-python = ">=3.10"
dependencies = [
    "autogen-core>=0.4,<0.5",
    "boto3>=1.37.12",
]

[tool.ruff]
line-length = 120
fix = true

target-version = "py310"
exclude = ["test/*"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["F401", "E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "autogen-agentchat>=0.4.9", # for testing
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "ruff>=0.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/autogen_ext_bedrock"]
